--- a/css/styles.css
+++ b/css/styles.css
@@ -4,9 +4,9 @@
   --primary-brand-iris-color: #4d5ae5;
   --pressed-state-ocean-color: #404bbf;
   --dark-navy-blue-color: #2e2f42;
-  /* --success-green-color: #31D0AA; */
+  --success-green-color: #31d0aa;
   --text-slate-color: #434455;
-  /* --subtle-text-light-slate-color: #8E8F99; */
+  --subtle-text-light-slate-color: #8e8f99;
   --accent-cornflower-color: #e7e9fc;
   --light-cloud-color: #f4f4fd;
   /* --modal-overlay-navy-blue-modal-color: #2E2F42; */
@@ -128,20 +128,31 @@ ul {
 }
 /* ------------------Hero------------------ */
 .hero {
+  margin: 0 auto;
+  max-width: 1440px;
+  height: 600px;
   padding-top: 188px;
   padding-bottom: 188px;
   background-color: var(--dark-navy-blue-color);
   text-align: center;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero-office.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 .hero-title {
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 48px;
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
   color: var(--dominant-color);
   max-width: 500px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 48px;
 }
 .hero-btn {
   font-family: "Roboto", sans-serif;
@@ -202,8 +213,20 @@ ul {
   gap: 24px;
 }
 .feature-item-wrap {
-  /* flex-basis: 264px; */
   width: calc((100% - 72px) / 4);
+}
+.feature-thumb {
+  display: flex;
+  width: 264px;
+  height: 112px;
+  margin-bottom: 8px;
+  background-color: var(--light-cloud-color);
+  border-radius: 4px;
+  justify-content: center;
+  align-items: center;
+}
+.feature-image {
+  fill: var(--dark-navy-blue-color);
 }
 /* ------------------What are we doing------------------ */
 .we-doing-wrap {
@@ -229,14 +252,78 @@ ul {
   border-radius: 0px 0px 4px 4px;
 }
 .section-card-info {
-  padding: 32px 0;
+  padding: 32px 16px;
   text-align: center;
+}
+.section-card-info > .text {
+  margin-bottom: 8px;
+}
+.card-social {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+}
+
+.card-social-item {
+  width: 40px;
+  height: 40px;
+}
+.card-social-link {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: var(--primary-brand-iris-color);
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+}
+.card-social-icon {
+  fill: var(--light-cloud-color);
+}
+.card-social-link:hover,
+.card-social-link:focus {
+  background-color: var(--pressed-state-ocean-color);
+}
+/* ------------------Customers------------------ */
+
+.customers {
+  padding-top: 130px;
+  padding-bottom: 120px;
+}
+.customers-list {
+  display: flex;
+  gap:24px;
+}
+.customers-item {
+  width: 168px;
+  height: 88px;
+}
+.customers-link {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  border: 1px solid var(--subtle-text-light-slate-color);
+  border-radius: 4px;
+  justify-content: center;
+  align-items: center;
+  color: var(--subtle-text-light-slate-color);
+}
+.customers-icon {
+  fill: currentColor;
+}
+.customers-link:is(:hover, :focus) {
+  color: var(--pressed-state-ocean-color);
+  border-color: var(--pressed-state-ocean-color);
 }
 /* ------------------Footer------------------ */
 .footer {
   background-color: var(--dark-navy-blue-color);
   padding-top: 100px;
   padding-bottom: 100px;
+}
+.footer-wrap {
+  display: flex;
+  gap: 120px;
 }
 .footer-logo {
   margin-bottom: 16px;
@@ -253,6 +340,38 @@ ul {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--accent-cornflower-color);
+}
+.footer-social-container {
+}
+.footer-social-text {
+  margin-bottom: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--dominant-color);
+}
+.footer-social-list {
+  display: flex;
+  gap: 16px;
+}
+.footer-social-item {
+  width: 40px;
+  height: 40px;
+}
+.footer-social-link {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+}
+.footer-social-icon {
+  fill: var(--light-cloud-color);
+}
+.footer-social-link:is(:hover, :focus) {
+  background-color: var(--success-green-color);
 }
 /* ------------------Portfolio------------------ */
 .section.portfolio {
@@ -282,6 +401,8 @@ ul {
   color: var(--dominant-color);
   background-color: var(--pressed-state-ocean-color);
   border-color: var(--pressed-state-ocean-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .portfolio-list {
   display: flex;
@@ -296,6 +417,10 @@ ul {
   border-right: 1px solid var(--accent-cornflower-color);
   border-bottom: 1px solid var(--accent-cornflower-color);
   border-left: 1px solid var(--accent-cornflower-color);
+}
+.item > .link:is(:hover, :focus) {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .portfolio-subtitle {
   margin-bottom: 8px;
